checkbox (0.16.2) saucy; urgency=low

  [ Alberto Milone ]
  * scripts/graphics_stress_test, scripts/rotation_test: make sure to
    always reset the "screen" variable. Somehow the NVIDIA driver manages
    to make it unusable after the first time. (LP: #1172667)

  [ Brendan Donegan ]
  * checkbox/parsers/submission.py - publish kernel-release information to
    interested parties.

 -- Brendan Donegan <brendan.donegan@canonical.com>  Tue, 07 May 2013 19:21:05 +0100

checkbox (0.16.1) saucy; urgency=low

  [ Jeff Lane ]
  * scripts/cpu_offlining: Modified script to no longer offline cpu0 to resolve
    a bug on ARM. Modified output so most of it is redirected to stderr for
    fail cases, we don't need that much for success cases. (LP: #1078897) 
  * jobs/mediacard.txt.in: Modified test instructions to be less confusing
    (LP: #970857)
  * scripts/cpu_topology: define the cpuinfo nested dicts on creation rather
    than define elements during parsing of /proc/cpuinfo (LP: #1111878)
  * scripts/lsmod_info: Corrected error handling for the check_output() call to
    trap the correct error. (LP: #1103647)
  * jobs/camera.txt.in: removed an extraneous requres line for gir1.2
    scripts/camera_test: added code to determine what version of gst we're
    using and set video type and plugin accordingly. (LP: #1100594)
  * scripts/network_check: added ability to specify custom target URL for
    debugging failures (LP: #1128017)
  * scripts/removable_storage_test: Added error handling to trap OSError on
    non-writable media and modified output to handle subsequent
    ZeroDivisionError issues when summarizing test results.
    jobs/media.txt.in: Modified instructions for SD/SDHC to specify using
    UNLOCKED cards to avoid issues when testing read-only media (LP: #1153894)

  [ Sylvain Pineau ]
  * jobs/suspend.txt.in, scripts/gpu_test: Remove the need of running the script
    with the root user, restore the workspaces switch and the HTML5 video