@@ -9,6 +9,10 @@ checkbox (0.16.2) saucy; urgency=low
   * checkbox/parsers/submission.py - publish kernel-release information to
     interested parties.
 
+  [ Daniel Manrique ]
+  * Ensured that button strings from the "continue" dialog are translatable
+    (LP: #1176695) 
+
  -- Brendan Donegan <brendan.donegan@canonical.com>  Tue, 07 May 2013 19:21:05 +0100
 
 checkbox (0.16.1) saucy; urgency=low
